update main description

--- a/index.html
+++ b/index.html
@@ -8,11 +8,25 @@
 	<body>
 		<h1>Deep Water Properties for BC Inlets</h1>
 		<p>
-			Below are the time series of deep sea temperature (&deg;C), salinity (PSU), and dissolved oxygen (mL/L) for a selection of inlets in BC.
-			Click on the tabs to view plots.
+			The deep waters of inlets, i.e. those waters trapped behind the inlet's sill, are usually quiescent. Isolated from the annual and higher frequency variations present in the near surface waters, the deep waters provide a good sampling location for observing the long term changes in water properties (temperature, salinity, and dissolved oxygen).
+			The deep water chronicle the temperature, salinity, and dissolved oxygen properties of the outside waters.
 		</p>
 		<p>
-			The time series are coloured by depth category, which is different for each inlet. Each time series displays how depths are sorted.
+			The almost 70 year long time series of water properties from some inlets, more than 90 years in the case of Saanich Inlet, are potentially rich sources of information about our coastal environment and how it has changed in the last half century.
+			This page presents the annual and monthly time series of deep water properties from the major BC inlets (Salish Sea Inlets - Saanich, Indian Arm, Howe Sound, Toba, and Jervis; Central and North Coast Inlets - Observatory, Douglas Channel, Dean, Burk, Rivers, Knight, and Bute; West Coast Vancouver Island Inlets - Muchalat, Alberni, Effingham, Neroutsos, Rupert-Holberg).
+			The page also provides basic physical, hydrologic, and oceanographic information for these inlets.
+		</p>
+		<h2>Background</h2>
+		<p>
+			Dr. George Pickard of the Institute of Oceanography at the University of British Columbia (UBC) initiated in 1951, and conducted for many years, a series of inlet cruises.
+			The inlet cruises, conducted mostly in the summer, were used for studies of the BC fjords and also served as training exercises for oceanography students.
+			Students obtained and analyzed water samples for temperature, salinity, and dissolved oxygen in many fjords, straits, passages, and channels on the entire BC coast.
+			The data set is a remarkably long (~70 years), high quality time series that spans the entire length of the mainland coast and Vancouver Island.
+		</p>
+		<p>
+			Several other researchers, notably Drs. John Tully and Mike Waldichuk, also conducted sampling programs in several BC inlets.
+			Dr. Tully's work extends back to the 1930's, and Dr. Waldichuk conducted several pollution cruises in the 60's and 70's to inlets where there were pulp mills. From the mid 1980's to the late 2000's, the fjord research at the Institute of Ocean Sciences (IOS) had provided extensive sets of observations from several fjords, in particular Knight, Saanich, and Alberni Inlets.
+			All of the IOS data sets and most, but not all, of the early inlet and coastal water surveys are now preserved in digital form in the IOS data archive.
 		</p>
 		<p id="source-description">
 			Data is taken from the archive at <a href="https://www.waterproperties.org/osd_data_archive">waterproperties.ca</a> and
