add lat/lon labels to new maps

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ layout: default
 		{% if inlet.legacy %}
 		<img src="figures/{{ inlet.id }}-map.gif" loading="lazy">
 		{% else %}
-		<img src="figures/{{ inlet.id }}-map.png" class="map" loading="lazy">
+		<img src="figures/{{ inlet.id }}-map.png" loading="lazy">
 		<img src="figures/{{ inlet.id }}-section.png" loading="lazy">
 		{% endif %}
 		{% if inlet.runoff %}
