replace plugin with pure-liquid titlecase solution
- Github refuses to use "unsupported" plugins, so we have to do it this
  way

--- a/index.html
+++ b/index.html
@@ -192,7 +192,13 @@ layout: default
 <div id="sampling-history-content" class="averaging-content sampling">
 	<h2>Sampling Statistics</h2>
 	{% for inlet in site.data.inlets %}
-	<h3>{{ inlet.id | replace: "-", " " | titlecase }}</h3>
+	{% assign words = inlet.id | split: "-" %}
+	{% capture name %}
+		{% for word in words %}
+			{{ word | capitalize }}
+		{% endfor %}
+	{% endcapture %}
+	<h3>{{ name }}</h3>
 	<img src="figures/{{ inlet.id }}-samples.png" loading="lazy">
 	<a href="figures/{{ inlet.id }}-monthly-sampling.png">
 		<img src="figures/{{ inlet.id }}-monthly-sampling.png" loading="lazy">
@@ -203,13 +209,25 @@ layout: default
 <div class="averaging-content monthly raw">
 	<div id="inlet-choice" class="tab">
 		{% for inlet in site.data.inlets %}
-		<button class="inlet-tablinks" onclick="changeInlet(event)" id="{{ inlet.id }}">{{ inlet.id | replace: "-", " " | titlecase }}</button>
+		{% assign words = inlet.id | split: "-" %}
+		{% capture name %}
+			{% for word in words %}
+				{{ word | capitalize }}
+			{% endfor %}
+		{% endcapture %}
+		<button class="inlet-tablinks" onclick="changeInlet(event)" id="{{ inlet.id }}">{{ name }}</button>
 		{% endfor %}
 	</div>
 
 	{% for inlet in site.data.inlets %}
+	{% assign words = inlet.id | split: "-" %}
+	{% capture name %}
+		{% for word in words %}
+			{{ word | capitalize }}
+		{% endfor %}
+	{% endcapture %}
 	<div id="{{ inlet.id }}-content" class="inlet-content">
-		<h2>{{ inlet.id | replace: "-", " " | titlecase }}</h2>
+		<h2>{{ name }}</h2>
 		{% if inlet.length or inlet.depth or inlet.basins or inlet.sill or inlet.surface %}
 		<h3>Physical Description</h3>
 		<ul>
